# rust-rocksdb

./: .travis.yml  Cargo.toml  Makefile  azure-pipelines.yml
.github/workflows/: rust.yml
librocksdb-sys/: Cargo.toml  Makefile  build.rs  build_version.cc  rocksdb_lib_sources.txt
librocksdb-sys/patches/: rocksdb.h
librocksdb-sys/src/: bindings.rs  lib.rs  patches.rs  patches_tests.rs
librocksdb-sys/tests/: ffi.rs
librocksdb-sys/tests/memory/: rocksdb_options_load_from_file.c
src/: backup.rs  checkpoint.rs  compaction_filter.rs  compaction_filter_factory.rs  comparator.rs  db.rs  db_iterator.rs  db_options.rs  db_pinnable_slice.rs  db_with_ttl.rs  ffi_util.rs  lib.rs  merge_operator.rs  open_raw.rs  optimistic_transaction.rs  optimistic_transaction_db.rs  options.rs  read_only_db.rs  secondary_db.rs  sst_file_writer.rs  transaction_db.rs
src/ops/: checkpoint.rs  columnfamily.rs  ingest_external_file.rs  mod.rs  open.rs
tests/: test_checkpoint.rs  test_column_family.rs  test_db.rs  test_full_options.rs  test_iterator.rs  test_merge_operator.rs  test_multithreaded.rs  test_optimistic_transaction.rs  test_raw_iterator.rs  test_slice_transform.rs  test_sst_file_writer.rs  test_transaction.rs  test_ttl_db.rs
tests/fail/: checkpoint_outlive_db.rs  checkpoint_outlive_db.stderr
