[package]
name = "ckb-librocksdb-sys"
version = "6.20.4"
edition = "2018"
authors = ["Karl Hobley <karlhobley10@gmail.com>", "Arkadiy Paronyan <arkadiy@ethcore.io>", "Nervos Core Dev <dev@nervos.org>"]
license = "MIT/Apache-2.0/BSD-3-Clause"
description = "Native bindings to librocksdb"
readme = "README.md"
repository = "https://github.com/nervosnetwork/rust-rocksdb"
keywords = [ "ffi", "rocksdb" ]

build = "build.rs"
links = "rocksdb"

[features]
default = [ "static" ]
static = []
snappy = []
lz4 = []
zstd = []
zlib = []
bzip2 = []


[dependencies]
libc = "0.2"

[dev-dependencies]
const-cstr = "0.3"
uuid = { version = "0.7", features = ["v4"] }

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
bindgen = { version = "0.59", default-features = false, features = ["runtime"] }
glob = "0.2.11"
